# go-cam-browser

./: .env  .env.production  .gitignore  .prettierignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
.github/workflows/: deploy.yaml  docker-build.yaml  test.yaml
data/: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
docs/: data.md
public/: .gitignore  data.json
scripts/: checkSearchDocs.ts
src/: App.module.css  App.test.tsx  App.tsx  config.tsx  constants.ts  indexedGoCamSchema.ts  main.tsx  types.ts  vite-env.d.ts
src/components/: Analytics.tsx  BioregistryLink.tsx  CommaSeparated.tsx  ConfigMenu.tsx  Facet.test.tsx  Facet.tsx  GoRelease.test.tsx  GoRelease.tsx  Header.module.css  Header.tsx  HeaderLinks.tsx  NoData.module.css  NoData.tsx  NumericFacetSlider.tsx  ResultList.tsx  ResultsCards.tsx  ResultsDisplay.tsx  ResultsList.tsx  ResultsTable.test.tsx  ResultsTable.tsx  SearchInput.tsx  TermLinkList.tsx  TextFacetList.tsx  UserSettingsMenu.tsx
src/hooks/: useFacets.test.ts  useFacets.ts  useQueryData.ts  useQuerySearchDocs.ts  useSearch.test.ts  useSearch.ts  useUrlState.ts  useUserSettings.ts
