[project]
name = "go-cam-browser-data"
version = "0.1.0"
description = "Python scripts for regenerating GO-CAM browser data"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Private :: Do Not Upload"
]
dependencies = [
    "gocam[oaklib]>=0.6.0",
    "rich>=14.2.0",
    "typer>=0.20.0",
]
